packages/editor/src/components/block-list/style.scss
/* ... */
.editor-block-list__layout .editor-block-list__block {
	position: relative;
	padding-left: $block-padding;
	padding-right: $block-padding;

	// Break long strings of text without spaces so they don't overflow the block.
	overflow-wrap: break-word;

	@include break-small() {
		// The block mover needs to stay inside the block to allow clicks when hovering the block-.
		padding-left: $block-padding + $block-side-ui-width + $block-side-ui-clearance - $border-width;
		padding-right: $block-padding + $block-side-ui-width + $block-side-ui-clearance - $border-width;
	}

	/**
	 * Notices
	 */

	.components-placeholder .components-with-notices-ui {
		margin: -10px 20px 12px 20px;
		width: calc(100% - 40px);
	}

	.components-with-notices-ui {
		margin: 0 0 12px 0;
		width: 100%;

		.components-notice {
			margin-left: 0;
			margin-right: 0;

			.components-notice__content {
				font-size: $default-font-size;
			}
		}
	}

	/**
	 * Block outline layout
	 */

	.editor-block-list__block-edit {
		position: relative;

		&::before {
			z-index: z-index(".editor-block-list__block-edit::before");
			content: "";
			position: absolute;
			outline: $border-width solid transparent;
			box-shadow: none;
			transition: outline 0.1s linear, box-shadow 0.1s linear;
			pointer-events: none;

			// Go edge-to-edge on mobile.
			right: -$block-padding;
			left: -$block-padding;
			top: -$block-padding;
			bottom: -$block-padding;
		}
	}

	// Selected style.
	&.is-selected > .editor-block-list__block-edit::before {
		// Use opacity to work in various editor styles.
		outline: $border-width solid $dark-opacity-light-500;
		box-shadow: inset ($border-width * 3) 0 0 0 $dark-opacity-500;

		.is-dark-theme & {
			outline-color: $light-opacity-light-500;
			box-shadow: inset ($border-width * 3) 0 0 0 $light-opacity-600;
		}

		// Switch to outset borders on larger screens.
		@include break-small() {
			box-shadow: ($border-width * -3) 0 0 0 $dark-opacity-500;

			.is-dark-theme & {
				box-shadow: ($border-width * -3) 0 0 0 $light-opacity-600;
			}
		}
	}

	// Hover style.
	&.is-hovered > .editor-block-list__block-edit::before {
		box-shadow: ($border-width * -3) 0 0 0 theme(outlines);
	}

	// Spotlight mode.
	&.is-focus-mode:not(.is-multi-selected) {
		opacity: 0.5;
		transition: opacity 0.1s linear;

		&:not(.is-focused) .editor-block-list__block,
		&.is-focused {
			opacity: 1;
		}
	}
}


/**
 * Cross-block selection
 */

.editor-block-list__layout .editor-block-list__block {
	::-moz-selection {
		background-color: $blue-medium-highlight;
	}

	::selection {
		background-color: $blue-medium-highlight;
	}

	// Selection style for multiple blocks.
	&.is-multi-selected *::selection {
		background-color: transparent;
	}

	&.is-multi-selected .editor-block-list__block-edit::before {
		background: $blue-medium-highlight;

		// Use opacity to work in various editor styles.
		mix-blend-mode: multiply;

		// Collapse extra vertical padding on selection.
		top: -$block-padding;
		bottom: -$block-padding;

		.is-dark-theme & {
			mix-blend-mode: soft-light;
		}
	}
}
/* ... */

